removed playbacks.play_price
